fixed uploadcare flickering

--- a/imports/ui/components/user-profile-view.less
+++ b/imports/ui/components/user-profile-view.less
@@ -93,3 +93,8 @@
 .uploadcare-dialog-footer {
 	display: none;
 }
+
+.uploadcare-panel-footer {
+  background: none;
+  border-top: none;
+}
